# lin

./: .gitignore  CMakeLists.txt
include/lbx/: lin.hpp
include/lbx/lin/: mat.hpp  scalar_math.hpp  unit.hpp  vec.hpp  vec3.hpp  vector_math.hpp
include/lbx/lin/detail/: assert.hpp  basic_unit.hpp  number.hpp  type.hpp
source/: lin.cpp
source/lin/: CMakeLists.txt  scalar_math.cpp
test/: CMakeLists.txt  test_0.cpp
